[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry-debug"
version = "0.1.0"
description = "CLI to analyze Raspberry Pi log snippets and surface likely root causes."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ticket Implementation"}]
dependencies = []

[project.scripts]
raspberry-debug = "raspberry_debug.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
